--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Natan Ashebir - Front-End Developer & UI/UX Designer</title>
     <meta name="description" content="Natan Ashebir is a passionate Computer Science graduate specializing in front-end development and UI/UX design. Creating responsive, user-centered web experiences." />
     <meta name="author" content="Natan Ashebir" />
